fix: Spacing between lines and icon

--- a/assets/sass/_sidebar.scss
+++ b/assets/sass/_sidebar.scss
@@ -54,6 +54,10 @@ div .sidebar {
 				color: $pink;
 				margin-bottom: 0.4rem;
 
+				li {
+					margin: 0.2rem 0;
+				}
+
 				a {
 					color: $pink;
 
